Fix sidebar spinner units alignments
When using position relative the elements will still occupy and affect
space around. This was flagrant when using chromium.

https://archive.org/download/t-34772-writer-selected-img/T34772-relative-shouldbe-absolute.png
as you can see the spinner with units are being dragged outside of the
screen

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -55,7 +55,7 @@
 	font-size: var(--default-font-size);
 	color: var(--color-text-dark);
 	margin: 5px;
-	position: relative;
+	position: absolute;
 	margin-inline-start: calc(-40px);
 }
 
